Bleh... automation and stuff.

--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -138,6 +138,7 @@ crafting {
     B:me.ichun.mods.ichunutil.common.block.BlockCompactPorkchop=true
     B:mrtjp.projectred.exploration.BlockDecorativeStone=true
     B:mrtjp.projectred.exploration.BlockOre=true
+    B:net.malisis.doors.block.RustyLadder=true
     B:net.minecraft.block.Block=true
     B:net.minecraft.block.BlockBone=true
     B:net.minecraft.block.BlockBookshelf=true
