--- a/config/malisisblocks.cfg
+++ b/config/malisisblocks.cfg
@@ -1,16 +1,16 @@
 # Configuration file
 
 general {
-    # config.enableVanishingGlitch.comment 
+    # Frames randomly become unstable and are temporarily out of this dimension. 
     B:config.enableVanishingGlitch=true
 
-    # config.enhancedMixedBlockPlacement.comment1 config.enhancedMixedBlockPlacement.comment2 
+    # Allows to place the block base on where you look instead of the side you're placing it on. Use sneak key to inverse the block placement. 
     B:config.enhancedMixedBlockPlacement=true
 
-    # config.simpleMixedBlockRendering.comment1 config.simpleMixedBlockRendering.comment2 
+    # Enables less fancy rendering for Mixed Blocks. Enable this option if you experience z-fighting issue or glitched rendering. 
     B:config.simpleMixedBlockRendering=false
 
-    # config.vanishingGlitchChance.comment 
+    # How often the frame become unstable. 
     D:config.vanishingGlitchChance=5.0E-4
 }
 
