--- a/config/morph.cfg
+++ b/config/morph.cfg
@@ -21,6 +21,25 @@ abilities {
 
 
 ##########################################################################################################
+# clientonly
+#--------------------------------------------------------------------------------------------------------#
+# These options affect only the client that loads the mod.\nIf you are looking for keybinds, look for them in ichunutil_keybinds.cfg.
+##########################################################################################################
+
+clientonly {
+    # Abilities to be hidden in the selector GUI. [default: ]
+    S:abilitiesToHideInGui <
+     >
+
+    # Disable the animation when you acquire a new morph. [range: 0 ~ 1, default: 0]
+    I:disableMorphAcquisitionAnimation=0
+
+    # Allow the mod to override player hand rendering? [range: 0 ~ 1, default: 1]
+    I:handRenderOverride=1
+}
+
+
+##########################################################################################################
 # gameplay
 #--------------------------------------------------------------------------------------------------------#
 # These options affect the gameplay while using the mod.
@@ -89,6 +108,16 @@ gameplay {
     # This is meant for debugging purposes and for modified local mod mob abilities mappings/NBT stripper.
     # Do take note that mappings server and clientside are not synched so both ends will require the same mappings. [range: 0 ~ 1, default: 0]
     I:useLocalResources=0
+}
+
+
+##########################################################################################################
+# keybind
+#--------------------------------------------------------------------------------------------------------#
+# If you're reading this in the config file, I would strongly recommend changing the keybinds in-game.\niChunUtil uses custom keybinds. Go to the controls/keybinds page and click on the bottom right corner.\n\nIf you really have to edit the config file, the format is <key code>, and append either ":SHIFT", ":CTRL", or ":ALT" for keys you want to hold down at the same time.\nFor key codes go to: http://minecraft.gamepedia.com/Key_codes \nExample: 48:SHIFT:ALT will bind to the B key when you hold Shift and Alt (On a QWERTY keyboard).
+##########################################################################################################
+
+keybind {
 }
 
 
