Bleh... automation and stuff.

--- a/config/randompatches.cfg
+++ b/config/randompatches.cfg
@@ -52,7 +52,7 @@ client {
 
         # The Minecraft window title.
         # Default: Minecraft 1.12.2
-        S:title=EMBERNITE.NET
+        S:title=EMBERNITE
     }
 
 }
