--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -203,13 +203,18 @@ crafting {
     B:openblocks.common.block.BlockSponge=true
     B:slimeknights.tconstruct.gadgets.block.BlockBrownstone=true
     B:slimeknights.tconstruct.gadgets.block.BlockDriedClay=true
+    B:slimeknights.tconstruct.shared.block.BlockClearGlass=true
+    B:slimeknights.tconstruct.shared.block.BlockClearStainedGlass=true
     B:slimeknights.tconstruct.shared.block.BlockDecoGround=true
     B:slimeknights.tconstruct.shared.block.BlockFirewood=true
     B:slimeknights.tconstruct.shared.block.BlockMetal=true
     B:slimeknights.tconstruct.shared.block.BlockOre=true
+    B:slimeknights.tconstruct.shared.block.BlockSlime=true
     B:slimeknights.tconstruct.shared.block.BlockSlimeCongealed=true
     B:slimeknights.tconstruct.shared.block.BlockSoil=true
+    B:slimeknights.tconstruct.smeltery.block.BlockSeared=true
     B:slimeknights.tconstruct.world.block.BlockSlimeDirt=true
+    B:slimeknights.tconstruct.world.block.BlockSlimeLeaves=true
     B:"team.chisel.Features$31$1"=true
     B:"team.chisel.Features$32$1"=true
     B:"team.chisel.Features$33$1"=true
@@ -305,6 +310,7 @@ crafting {
     B:vazkii.quark.world.block.BlockBiomeCobblestone=true
     B:vazkii.quark.world.block.BlockBiotite=true
     B:vazkii.quark.world.block.BlockBiotiteOre=true
+    B:vazkii.quark.world.block.BlockCrystal=true
     B:vazkii.quark.world.block.BlockLimestone=true
     B:vazkii.quark.world.block.BlockMarble=true
 }
