--- a/config/splash.properties
+++ b/config/splash.properties
@@ -1,5 +1,5 @@
 #Splash screen properties
-#Wed Dec 19 20:41:21 CST 2018
+#Thu Dec 20 04:40:06 CST 2018
 background=0xFFFFFF
 memoryGood=0x78CB34
 font=0x0
@@ -9,7 +9,7 @@ memoryLow=0xE42F2F
 rotate=false
 memoryWarn=0xE6E84A
 showMemory=true
-enabled=true
+enabled=false
 bar=0xCB3D35
 resourcePackPath=resources
 logoOffset=0
