--- a/config/sponge/global.conf
+++ b/config/sponge/global.conf
@@ -13,7 +13,7 @@ sponge {
         # A list of mod ids that have broken network handlers (they interact with the game from a Netty handler thread).
         # All network handlers from a forcibly scheduled to run on the main thread.
         # Note that this setting should be considered a last resort, and should only be used as a stopgap measure while waiting for a mod to properly fix the issue.
-        broken-network-handler-mods=[]
+        broken-network-handler-mods=null
     }
     bungeecord {
         # If 'true', allows BungeeCord to forward IP address, UUID, and Game Profile to this server.
@@ -70,7 +70,17 @@ sponge {
         aliases {}
         # Patches the specified commands to respect the world of the sender instead of applying the 
         # changes on the all worlds.
-        multi-world-patches {}
+        multi-world-patches {
+            defaultgamemode=true
+            difficulty=true
+            gamerule=true
+            seed=true
+            setdefaultspawnpoint=true
+            time=true
+            toggledownfall=true
+            weather=true
+            worldborder=true
+        }
     }
     debug {
         # Detect and prevent parts of PlayerChunkMap being called off the main thread.
@@ -370,7 +380,7 @@ sponge {
     }
     player-block-tracker {
         # Block IDs that will be blacklisted for player block placement tracking.
-        block-blacklist=[]
+        block-blacklist=null
         # If 'true', adds player tracking support for block positions. 
         # Note: This should only be disabled if you do not care who caused a block to change.
         enabled=true
@@ -409,10 +419,10 @@ sponge {
         # a safe block for players to warp into. 
         # You should only list blocks here that are incorrectly selected, solid blocks that prevent 
         # movement are automatically excluded.
-        unsafe-body-block-ids=[]
+        unsafe-body-block-ids=null
         # Block IDs that are listed here will not be selected by Sponge's safe 
         # teleport routine as a safe floor block.
-        unsafe-floor-block-ids=[]
+        unsafe-floor-block-ids=null
     }
     tileentity-activation {
         # If 'true', newly discovered tileentities will be added to this config with default settings.
