--- a/config/sponge/worlds/minecraft/overworld/dimension.conf
+++ b/config/sponge/worlds/minecraft/overworld/dimension.conf
@@ -8,6 +8,10 @@
 # 
 
 sponge {
+    player-block-tracker {
+        # Block IDs that will be blacklisted for player block placement tracking.
+        block-blacklist=null
+    }
     world {
         # If 'true', this world will generate its spawn the moment its loaded.
         generate-spawn-on-load=false
