--- a/config/splash.properties
+++ b/config/splash.properties
@@ -9,7 +9,7 @@ memoryLow=0xE42F2F
 rotate=false
 memoryWarn=0xE6E84A
 showMemory=true
-enabled=false
+enabled=true
 bar=0xCB3D35
 resourcePackPath=resources
 logoOffset=0
