Bleh... automation and stuff.

--- a/config/JourneyMapDefaults/journeymap.core.config
+++ b/config/JourneyMapDefaults/journeymap.core.config
@@ -1,5 +1,5 @@
 // JourneyMap configuration file. Modify at your own risk!
-// To use in all worlds, place here: journeymap/config/5.5/
+// To use in all worlds, place here: journeymap\config\5.5\
 // For more information, go to: http://journeymap.info/Options_Manager
 {
   "logLevel": "INFO",
@@ -13,7 +13,7 @@
   "checkUpdates": "false",
   "recordCacheStats": "false",
   "browserPoll": "2000",
-  "themeName": "OceanMonument",
+  "themeName": "Stronghold",
   "caveIgnoreGlass": "true",
   "mapBathymetry": "false",
   "mapTopography": "true",
