--- a/config/JourneyMapDefaults/journeymap.minimap.config
+++ b/config/JourneyMapDefaults/journeymap.minimap.config
@@ -1,16 +1,16 @@
 // JourneyMap configuration file. Modify at your own risk!
-// To use in all worlds, place here: journeymap/config/5.5/
+// To use in all worlds, place here: journeymap\config\5.5\
 // For more information, go to: http://journeymap.info/Options_Manager
 {
   "enabled": "true",
-  "shape": "Circle",
+  "shape": "Square",
   "position": "TopRight",
   "showDayNight": "true",
-  "info1Label": "FPS",
-  "info2Label": "GameTime",
+  "info1Label": "Blank",
+  "info2Label": "Blank",
   "info3Label": "Location",
   "info4Label": "Biome",
-  "sizePercent": "30",
+  "sizePercent": "25",
   "frameAlpha": "100",
   "terrainAlpha": "100",
   "orientation": "PlayerHeading",
@@ -28,7 +28,7 @@
   "showVillagers": "true",
   "showPets": "true",
   "showPlayers": "true",
-  "fontScale": "1",
+  "fontScale": "2",
   "showWaypointLabels": "true",
   "locationFormatVerbose": "false",
   "locationFormat": "xyz",
