--- a/config/JourneyMapDefaults/journeymap.waypoint.config
+++ b/config/JourneyMapDefaults/journeymap.waypoint.config
@@ -1,5 +1,5 @@
 // JourneyMap configuration file. Modify at your own risk!
-// To use in all worlds, place here: journeymap/config/5.5/
+// To use in all worlds, place here: journeymap\config\5.5\
 // For more information, go to: http://journeymap.info/Options_Manager
 {
   "managerEnabled": "true",
