--- a/config/randomtweaks/randomtweaks.cfg
+++ b/config/randomtweaks/randomtweaks.cfg
@@ -7,13 +7,11 @@
 ##########################################################################################################
 
 animals {
-    # The chance that a bat drops a piece of leather when killed.
-    # Min: 0.0
-    # Max: 1.0
+    # The chance that a bat drops a piece of Leather when killed.
     # Default: 0.8
     D:batLeatherDropChance=0.8
 
-    # Enables colored sheep spawning.
+    # Whether colored sheep should spawn.
     # Default: true
     B:coloredSheep=true
 
@@ -21,11 +19,11 @@ animals {
     # Default: true
     B:leashableVillagers=true
 
-    # Whether tamed ocelots can be healed with fish.
+    # Tamed Ocelots can be healed with fish.
     # Default: true
     B:ocelotsCanBeHealed=true
 
-    # Whether tamed parrots can be healed with seeds.
+    # Tamed Parrots can be healed with seeds.
     # Default: true
     B:parrotsCanBeHealed=true
 
@@ -33,14 +31,9 @@ animals {
     # Default: true
     B:protectPetsFromOtherPets=true
 
-    # Prevents pets from being attacked by their owners.
-    # By default, owners can still attack their pets while sneaking.
+    # Prevents pets from being attacked by their owners (unless they're sneaking).
     # Default: true
     B:protectPetsFromOwners=true
-
-    # Prevents pets from being attacked by their owners while sneaking.
-    # Default: false
-    B:protectPetsFromSneakingOwners=false
 
     ##########################################################################################################
     # randomizedages
@@ -71,27 +64,23 @@ animals {
     ##########################################################################################################
 
     squids {
-        # The number of squids allowed in one chunk.
-        # Set this to 0 to disable squid spawning.
-        # Set this to -1 to disable this limit.
+        # The amount of squids allowed in one chunk. Set this to 0 to disable squid spawning, and set this to -1to disable this limit.
         # Min: -1
         # Max: 2147483647
         # Default: 12
         I:chunkLimit=12
 
-        # The maximum number of squids that can be spawned in a pack.
-        # Set this to 0 to use vanilla behavior.
+        # The maximum number of squids that can be spawned in a pack. Set to 0 to use vanilla behavior.
         # Min: 0
         # Max: 2147483647
         # Default: 2
         I:maxPackSize=2
 
-        # Disables squid spawning when a player is not within this radius.
-        # Set this to 0 to disable this limit.
+        # Disables squid spawning when a player is not within the specified radius. Set this to 0 to disable this limit.
         # Min: 0
         # Max: 2147483647
-        # Default: 128
-        I:spawnRadiusLimit=128
+        # Default: 64
+        I:spawnRadiusLimit=64
     }
 
 }
@@ -104,19 +93,17 @@ animals {
 ##########################################################################################################
 
 bonemeal {
-    # The amount of stages bone meal should cause cacti to grow.
-    # 16 stages is a full block.
+    # The amount of stages Bone Meal should cause Cacti to grow. 16 is a full block.
     # Min: 0
     # Max: 16
     # Default: 8
     I:cacti=8
 
-    # Whether bone meal should grow nether wart.
+    # Whether Bone Meal should grow Nether Warts.
     # Default: true
-    B:netherWart=true
+    B:netherWarts=true
 
-    # The amount of stages bone meal should cause sugar canes to grow.
-    # 16 stages is a full block.
+    # The amount of stages Bone Meal should cause Sugar Canes to grow. 16 is a full block.
     # Min: 0
     # Max: 16
     # Default: 8
@@ -135,15 +122,15 @@ client {
     # Default: true
     B:clearWater=true
 
-    # Whether contributor capes should be enabled.
+    # Enables contributor capes.
     # Default: true
     B:contributorCapes=true
 
-    # Disables the ender dragon death sound.
+    # Disables the Ender Dragon death sound.
     # Default: false
     B:disableEnderDragonDeathSound=false
 
-    # Disables the potion icons at the top right.
+    # Whether to disable the potion icons at the top right.
     # Default: false
     B:disablePotionIcons=false
 
@@ -151,7 +138,7 @@ client {
     # Default: true
     B:disablePotionShift=true
 
-    # Disables the wither spawn sound.
+    # Disables the Wither spawn sound.
     # Default: false
     B:disableWitherSpawnSound=false
 
@@ -178,27 +165,27 @@ client {
     ##########################################################################################################
 
     autothirdperson {
-        # Enables auto-third person upon entering a boat.
+        # Whether auto-third person is enabled when riding a boat.
         # Default: false
         B:boat=false
 
-        # Enables auto-third person upon flying with elytra.
+        # Whether auto-third person is enabled when flying with elytra.
         # Default: true
         B:elytra=true
 
-        # Enables auto-third person.
+        # Whether auto-third person is enabled.
         # Default: true
         B:enabled=true
 
-        # Enables auto-third person upon mounting a horse.
+        # Whether auto-third person is enabled when riding a horse.
         # Default: false
         B:horse=false
 
-        # Enables auto-third person upon entering a minecart.
+        # Whether auto-third person is enabled when riding a minecart.
         # Default: false
         B:minecart=false
 
-        # Enables auto-third person upon mounting a pig.
+        # Whether auto-third person is enabled when riding a pig.
         # Default: false
         B:pig=false
     }
@@ -210,15 +197,15 @@ client {
     ##########################################################################################################
 
     creativetabs {
-        # Moves the bucket to the Tools creative tab.
+        # Moves the Bucket to the Tools creative tab.
         # Default: true
         B:moveBucketCreativeTab=true
 
-        # Adds the command blocks to the Redstone creative tab.
+        # Adds the Command Blocks to the Redstone creative tab.
         # Default: true
         B:setCommandBlockCreativeTab=true
 
-        # Adds the dragon egg to the Decorations creative tab.
+        # Adds the Dragon Egg to the Decorations creative tab.
         # Default: true
         B:setDragonEggCreativeTab=true
 
@@ -234,11 +221,9 @@ client {
     ##########################################################################################################
 
     ding {
-        # The names of the sounds to play when Minecraft starts.
-        # Leave this empty to disable this feature.
+        # The names of the sounds to play when Minecraft starts. Leave this empty to disable it.
         # Default: [entity.experience_orb.pickup]
         S:soundNames <
-            entity.experience_orb.pickup
          >
 
         # The pitch of the sound to play when Minecraft starts.
@@ -247,14 +232,13 @@ client {
         # Default: 1.0
         D:soundPitch=1.0
 
-        # The names of the sounds to play when a world loads.
-        # Leave this empty to disable this feature.
+        # The name of the sound to play when a world loads.Leave this empty to disable it.
         # Default: [entity.experience_orb.pickup]
         S:worldSoundNames <
             entity.experience_orb.pickup
          >
 
-        # The pitch of the sound to play when a world loads.
+        # The pitch of the sound to play when a world starts.
         # Min: 0.0
         # Max: 10.0
         # Default: 1.0
@@ -268,13 +252,17 @@ client {
     ##########################################################################################################
 
     keybinds {
-        # Whether FoV changes should be enabled by default.
+        # Whether FoV changes are enabled by default.
         # Default: true
         B:fovChangesEnabledByDefault=true
 
         # Whether a status message should be displayed when FoV changes are toggled.
         # Default: true
         B:fovChangesStatusMessage=true
+
+        # Enables the Noclip keybind, which toggles between /gamemode creative and /gamemode spectator. This does the same thing as F3+N, so is unbound by default.
+        # Default: true
+        B:noclip=true
 
         # Enables the Reload Sound System keybind.
         # Default: true
@@ -390,11 +378,11 @@ commands {
 ##########################################################################################################
 
 hunger {
-    # Carries any excess hunger level gained by eating over to the saturation.
+    # If this is enabled, any excess hunger level gained by eating will be added to the saturation.
     # Default: false
     B:carryExcessHungerToSaturation=false
 
-    # Enables hunger tweaks.
+    # Whether hunger tweaks should be enabled.
     # Default: true
     B:enabled=true
 
@@ -416,8 +404,7 @@ hunger {
     # Default: 3
     I:minimumRespawnHungerLevel=3
 
-    # What happens to a player's hunger when they respawn.
-    # This has no effect in creative mode.
+    # What happens to a player's hunger when they respawn. This has no effect in creative mode.
     # Valid values:
     # RESET
     # DONT_RESET
@@ -425,7 +412,7 @@ hunger {
     # Default: RESET_UNLESS_KEEP_INVENTORY
     S:respawnResetBehavior=RESET_UNLESS_KEEP_INVENTORY
 
-    # The value added to the player's food level to calculate the maximum saturation level.
+    # This value is added to the player's food level to calculate the maximum saturation level.
     # Min: 0.0
     # Max: 1.7976931348623157E308
     # Default: 0.0
@@ -440,21 +427,17 @@ hunger {
 ##########################################################################################################
 
 misc {
-    # The base attack speed for players.
-    # Set this to 16.0 or higher to remove the attack cooldown.
+    # Sets the base attack speed for players. Set this to 16.0 or higher to remove the attack cooldown. 4.0 is the default value.
     # Min: 0.0
     # Max: 1024.0
     # Default: 4.0
     D:attackSpeed=4.0
 
-    # Changes the names of the stone and wooden buttons so that they describe their type.
+    # Changes the names of the stone and wooden buttons so that their type is in them.
     # Default: false
     B:betterButtonNames=false
 
-    # When death punishments should be enabled.
-    # When death punishments are enabled, players lose all XP and 3 hunger points upon dying.
-    # This is always disabled in creative mode.
-    # This has no effect on hunger if hunger resetting is enabled by hunger.respawnResetBehavior.
+    # Sets when death punishments are enabled in which all XP and 3 hunger points are removed. This is always disabled in creative mode and overrides hunger.respawnResetBehavior.
     # Valid values:
     # ENABLED
     # ENABLED_IF_KEEP_INVENTORY
@@ -466,8 +449,7 @@ misc {
     # Default: true
     B:disableCumulativeAnvilCosts=true
 
-    # The name of the gamerule that disables nether portal creation.
-    # Set this to an empty string to disable this gamerule.
+    # The name of the gamerule that disables Nether portal creation. Set this to an empty string to disable the gamerule.
     # Default: disableNetherPortalCreation
     S:disableNetherPortalCreationGameruleName=disableNetherPortalCreation
 
@@ -483,7 +465,7 @@ misc {
     # Default: DONT_TRAMPLE_IF_FEATHER_FALLING
     S:farmlandTrampleBehavior=DONT_TRAMPLE_IF_FEATHER_FALLING
 
-    # Generates Roman numerals from -32768 to 32767 as they are needed.
+    # Enables Roman numerals from -32768 to 32767.
     # Default: true
     B:moreRomanNumerals=true
 
@@ -535,31 +517,25 @@ playerheaddrops {
 ##########################################################################################################
 
 world {
-    # Enables the Realistic world type
-    # Name: REALISTIC
+    # Enables the Realistic world type. Name: REALISTIC
     # Default: true
     B:realisticWorldType=true
 
-    # The rarity of non-empty chunks in a Void Islands world.
-    # If this is set to n, there is a 1 in n chance of a chunk being non-empty.
-    # If this is set to 1, only the spawn chunk is generated.
+    # The rarity of non-empty chunks in a Void Islands world. If n, there is a 1 in n chance of a chunk being non-empty. If this is set to 1, only the spawn chunk is generated.
     # Min: 1
     # Max: 2147483647
     # Default: 10
     I:voidIslandsChunkRarity=10
 
-    # The biome of the void chunks of a Void Islands world.
-    # Leave this empty for randomized biomes.
+    # The biome of the void chunks of a Void Islands world. Leave this empty to randomize the biomes.
     # Default: minecraft:plains
     S:voidIslandsWorldBiome=minecraft:plains
 
-    # Enables the Void Islands world type
-    # Name: VOIDISLANDS
+    # Enables the Void Islands world type. Name: VOIDISLANDS
     # Default: true
     B:voidIslandsWorldType=true
 
-    # The biome of a Void world.
-    # Leave this empty for randomized biomes.
+    # The biome of a Void world. Leave this empty to randomize the biomes.
     # Default: minecraft:plains
     S:voidWorldBiome=minecraft:plains
 
@@ -567,8 +543,7 @@ world {
     # Default: minecraft:glass
     S:voidWorldBlock=minecraft:glass
 
-    # Enables the Void world type
-    # Name: VOID
+    # Enables the Void world type. Name: VOID
     # Default: true
     B:voidWorldType=true
 
